# caritas

./: .gitignore  CLAUDE.md  caritas.db  index.html  pyproject.toml
backend/: auth.py  database.py  main.py  pyproject.toml  seed.py  seed_data.json
backend/models/: __init__.py  calendar.py  chat.py  report.py  user.py  village.py
backend/routers/: auth.py  calendar.py  chat.py  reports.py  sync.py  users.py  villages.py
backend/schemas/: __init__.py  auth.py  calendar.py  chat.py  report.py  sync.py  user.py  village.py
backend/tests/: test_chat.py
docs/: architecture.html
docs/assets/: caritas-style-demo.html
docs/mock-pages/: chat-widget.js  dashboard.html  loading.html  login.html  not-implemented.html  village.html
mobile/: home.html  index.html  login.html  planning.html  report-form.html
