[project]
name = "backend"
version = "0.1.0"
description = "Caritas HARVEST backend API"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy>=2.0,<3",
    "python-jose[cryptography]>=3.3,<4",
    "passlib[bcrypt]>=1.7,<2",
    "python-multipart>=0.0.9",
    "alembic>=1.14,<2",
]
